--- a/index.html
+++ b/index.html
@@ -65,20 +65,24 @@ import { get, set } from 'idb-keyval';
 import { 
   Package, PlusCircle, ShoppingCart, Settings as SettingsIcon, Cloud, CloudUpload, 
   AlertCircle, BarChart3, Calendar, Minus, Plus, Trash2, Key, Check, 
-  ShieldCheck, Share2, Download, ChevronRight
+  ShieldCheck, Share2, Download, ChevronRight, FileSpreadsheet, UserCircle, HelpCircle
 } from 'lucide-react';
 
 // --- Constants ---
 const STORAGE_KEY = 'kg_stock_idb';
 const CONFIG_KEY = 'kg_config_idb';
 const ItemStatus = { RED: 'RED', YELLOW: 'YELLOW', GREEN: 'GREEN' };
+const SyncStatus = { IDLE: 'IDLE', SYNCING: 'SYNCING', SUCCESS: 'SUCCESS', ERROR: 'ERROR', DISCONNECTED: 'DISCONNECTED' };
+
 const CATEGORIES = [
   { id: 'pantry', name: 'Pantry', icon: '🥫' },
   { id: 'dairy', name: 'Dairy', icon: '🥛' },
   { id: 'produce', name: 'Produce', icon: '🍎' },
   { id: 'meat', name: 'Meat', icon: '🥩' },
   { id: 'freezer', name: 'Freezer', icon: '🧊' },
-  { id: 'household', name: 'Household', icon: '🧹' }
+  { id: 'household', name: 'Household', icon: '🧹' },
+  { id: 'personal_care', name: 'Personal Care', icon: '🧴' },
+  { id: 'hygiene', name: 'Hygiene Products', icon: '🧼' }
 ];
 
 // --- DB logic ---
@@ -96,8 +100,80 @@ const db = {
   deleteItem: async (id) => {
     const items = await db.getItems();
     await db.saveItems(items.filter(i => i.id !== id));
+  },
+  getClientId: async () => (await get(CONFIG_KEY))?.googleClientId || null,
+  saveClientId: async (id) => {
+    const config = (await get(CONFIG_KEY)) || {};
+    await set(CONFIG_KEY, { ...config, googleClientId: id });
   }
 };
+
+// --- Sync Service ---
+const FILE_NAME = 'kg_stock_data_v1.json';
+class SyncService {
+  static accessToken = null;
+  static client = null;
+
+  static async initialize(onToken) {
+    const clientId = await db.getClientId();
+    if (!clientId || typeof google === 'undefined') return;
+    
+    try {
+      this.client = google.accounts.oauth2.initTokenClient({
+        client_id: clientId,
+        scope: 'https://www.googleapis.com/auth/drive.appdata',
+        callback: (res) => {
+          if (res.access_token) {
+            this.accessToken = res.access_token;
+            onToken(res.access_token);
+          }
+        },
+      });
+    } catch (e) { console.error("Sync Init Error", e); }
+  }
+
+  static signIn() {
+    if (this.client) this.client.requestAccessToken();
+    else alert("Please enter your Google Client ID in Settings first.");
+  }
+
+  static async syncWithDrive() {
+    if (!this.accessToken) return;
+    const local = await db.getItems();
+    const listRes = await fetch(`https://www.googleapis.com/drive/v3/files?spaces=appDataFolder&q=name='${FILE_NAME}'`, {
+      headers: { Authorization: `Bearer ${this.accessToken}` }
+    });
+    const list = await listRes.json();
+    const file = list.files?.[0];
+
+    if (file) {
+      const getRes = await fetch(`https://www.googleapis.com/drive/v3/files/${file.id}?alt=media`, {
+        headers: { Authorization: `Bearer ${this.accessToken}` }
+      });
+      const remote = await getRes.json();
+      const mergedMap = new Map();
+      [...remote, ...local].forEach(i => {
+        const ex = mergedMap.get(i.id);
+        if (!ex || (i.lastModified || 0) > (ex.lastModified || 0)) mergedMap.set(i.id, i);
+      });
+      const merged = Array.from(mergedMap.values());
+      await db.saveItems(merged);
+      await fetch(`https://www.googleapis.com/upload/drive/v3/files/${file.id}?uploadType=media`, {
+        method: 'PATCH',
+        headers: { Authorization: `Bearer ${this.accessToken}`, 'Content-Type': 'application/json' },
+        body: JSON.stringify(merged)
+      });
+    } else {
+      const metadata = { name: FILE_NAME, parents: ['appDataFolder'] };
+      const form = new FormData();
+      form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
+      form.append('file', new Blob([JSON.stringify(local)], { type: 'application/json' }));
+      await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
+        method: 'POST', headers: { Authorization: `Bearer ${this.accessToken}` }, body: form
+      });
+    }
+  }
+}
 
 // --- Utils ---
 const calculateStatus = (item) => {
@@ -109,6 +185,18 @@ const calculateStatus = (item) => {
     if (days <= 3) return ItemStatus.YELLOW;
   }
   return item.quantity === item.parLevel ? ItemStatus.YELLOW : ItemStatus.GREEN;
+};
+
+const convertToCSV = (items) => {
+  const headers = ['Name', 'Category', 'Quantity', 'Par Level', 'Expiry Date'];
+  const rows = items.map(item => [
+    `"${item.name.replace(/"/g, '""')}"`,
+    `"${CATEGORIES.find(c => c.id === item.category)?.name || item.category}"`,
+    item.quantity,
+    item.parLevel,
+    item.expiryDate || 'N/A'
+  ]);
+  return [headers.join(','), ...rows.map(r => r.join(','))].join('\n');
 };
 
 // --- View: Inventory ---
@@ -238,11 +326,66 @@ const AddItemView = ({ onAdded }) => {
   );
 };
 
+// --- View: Settings ---
+const SettingsView = ({ items, syncStatus, onSync, onSignIn, handleExportCSV }) => {
+  const [clientId, setClientId] = useState('');
+  useEffect(() => { db.getClientId().then(id => id && setClientId(id)); }, []);
+
+  const saveConfig = async () => {
+    await db.saveClientId(clientId);
+    alert("Google Client ID Saved!");
+  };
+
+  return (
+    <div className="space-y-6 pt-4 pb-32">
+      <div className="bg-slate-900 text-white p-6 rounded-[2rem] shadow-xl">
+        <h3 className="text-[10px] font-black uppercase tracking-widest mb-4 opacity-50 flex items-center gap-2"><Key size={14}/> Sync Configuration</h3>
+        <input 
+          type="password" 
+          value={clientId} 
+          onChange={e => setClientId(e.target.value)} 
+          placeholder="Google Client ID" 
+          className="w-full bg-slate-800 p-4 rounded-2xl text-[10px] font-mono outline-none mb-3 text-blue-300" 
+        />
+        <button onClick={saveConfig} className="w-full bg-blue-600 py-3 rounded-2xl font-bold text-xs uppercase tracking-widest">Save Config</button>
+      </div>
+
+      <div className="bg-white p-6 rounded-[2rem] border shadow-sm">
+        <h3 className="text-xs font-black uppercase mb-4 flex items-center gap-2 tracking-widest"><Cloud size={16}/> Cloud Storage</h3>
+        {syncStatus === SyncStatus.DISCONNECTED ? (
+          <button onClick={onSignIn} className="w-full bg-blue-600 text-white py-4 rounded-2xl font-bold shadow-md uppercase text-xs tracking-widest">Connect Google Drive</button>
+        ) : (
+          <div className="space-y-3">
+             <div className="bg-slate-50 p-4 rounded-2xl flex items-center justify-between">
+                <span className="text-[10px] font-black uppercase text-slate-400 tracking-widest">Status</span>
+                <span className={`text-[10px] font-black uppercase px-2 py-1 rounded ${
+                  syncStatus === SyncStatus.SUCCESS ? 'text-emerald-500 bg-emerald-50' : 
+                  syncStatus === SyncStatus.SYNCING ? 'text-amber-500 bg-amber-50 animate-pulse' : 'text-slate-400'
+                }`}>{syncStatus}</span>
+             </div>
+             <button onClick={onSync} disabled={syncStatus === SyncStatus.SYNCING} className="w-full bg-slate-900 text-white py-4 rounded-2xl font-bold uppercase text-xs tracking-widest disabled:opacity-50">Sync Now</button>
+          </div>
+        )}
+      </div>
+
+      <div className="bg-white p-6 rounded-[2rem] border shadow-sm">
+        <h3 className="text-xs font-black uppercase mb-4 opacity-50 tracking-widest">Data Portability</h3>
+        <button onClick={handleExportCSV} className="w-full bg-slate-100 p-4 rounded-2xl flex items-center justify-between font-bold text-sm hover:bg-slate-200 transition-colors">
+          Export as CSV <FileSpreadsheet size={16}/>
+        </button>
+      </div>
+
+      <p className="text-[10px] text-slate-400 font-bold uppercase tracking-widest text-center">Overstock Guard v1.5.2</p>
+    </div>
+  );
+};
+
 // --- Main App ---
 const App = () => {
   const [view, setView] = useState('inventory');
   const [items, setItems] = useState([]);
   const [loading, setLoading] = useState(true);
+  const [syncStatus, setSyncStatus] = useState(SyncStatus.DISCONNECTED);
 
   const refresh = async () => { 
     const data = await db.getItems(); 
@@ -250,13 +393,48 @@ const App = () => {
     setLoading(false); 
   };
 
-  useEffect(() => { refresh(); }, []);
+  const triggerSync = async () => {
+    setSyncStatus(SyncStatus.SYNCING);
+    try {
+      await SyncService.syncWithDrive();
+      await refresh();
+      setSyncStatus(SyncStatus.SUCCESS);
+      setTimeout(() => setSyncStatus(SyncStatus.IDLE), 3000);
+    } catch (error) {
+      setSyncStatus(SyncStatus.ERROR);
+      setTimeout(() => setSyncStatus(SyncStatus.IDLE), 3000);
+    }
+  };
+
+  useEffect(() => {
+    refresh();
+    setTimeout(async () => {
+      await SyncService.initialize((token) => {
+        if (token) {
+          setSyncStatus(SyncStatus.IDLE);
+          triggerSync();
+        }
+      });
+    }, 1500);
+  }, []);
 
   const stats = useMemo(() => items.reduce((a, i) => {
     const s = calculateStatus(i);
     if (s === ItemStatus.RED) a.crit++; else if (s === ItemStatus.YELLOW) a.low++;
     return a;
   }, { crit: 0, low: 0 }), [items]);
+
+  const handleExportCSV = () => {
+    const csvContent = convertToCSV(items);
+    const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+    const url = URL.createObjectURL(blob);
+    const link = document.createElement('a');
+    link.setAttribute('href', url);
+    link.setAttribute('download', `kitchen-inventory-${new Date().toISOString().split('T')[0]}.csv`);
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+  };
 
   return (
     <div className="flex flex-col h-screen max-w-md mx-auto bg-slate-50 overflow-hidden relative border-x border-slate-200">
@@ -267,10 +445,15 @@ const App = () => {
               <Package className="text-white" size={20}/>
             </div>
             <div>
-              <h1 className="text-xl font-black uppercase tracking-tighter italic">Guard</h1>
+              <h1 className="text-xl font-black uppercase tracking-tighter italic flex items-center gap-2">
+                Overstock Guard 
+                {syncStatus === SyncStatus.SYNCING ? <CloudUpload className="text-amber-500 animate-pulse" size={16}/> : 
+                 syncStatus === SyncStatus.SUCCESS ? <Cloud className="text-emerald-500" size={16}/> : 
+                 syncStatus === SyncStatus.ERROR ? <AlertCircle className="text-red-500" size={16}/> : null}
+              </h1>
             </div>
           </div>
-          <button onClick={() => setView('settings')} className="text-slate-300 hover:text-slate-900 transition-colors">
+          <button onClick={() => setView('settings')} className={`p-2 rounded-xl transition-all ${view === 'settings' ? 'bg-slate-100 text-slate-900' : 'text-slate-300'}`}>
             <SettingsIcon size={20}/>
           </button>
         </div>
@@ -301,20 +484,19 @@ const App = () => {
         ) : view === 'inventory' ? (
           <InventoryView items={items} onUpdate={refresh} />
         ) : view === 'add' ? (
-          <AddItemView onAdded={() => { refresh(); setView('inventory'); }} />
+          <AddItemView onAdded={() => { refresh(); setView('inventory'); triggerSync(); }} />
+        ) : view === 'settings' ? (
+          <SettingsView 
+            items={items} 
+            syncStatus={syncStatus} 
+            onSync={triggerSync} 
+            onSignIn={() => SyncService.signIn()} 
+            handleExportCSV={handleExportCSV} 
+          />
         ) : (
-          <div className="pt-4 space-y-4">
-             <div className="bg-slate-900 text-white p-6 rounded-[2rem] shadow-xl">
-               <h3 className="text-xs font-black uppercase mb-4 opacity-50 tracking-widest">Data Management</h3>
-               <button onClick={() => {
-                 const blob = new Blob([JSON.stringify(items)], { type: 'application/json' });
-                 const url = URL.createObjectURL(blob);
-                 const a = document.createElement('a'); a.href = url; a.download = 'guard-backup.json'; a.click();
-               }} className="w-full bg-slate-800 p-4 rounded-2xl flex items-center justify-between font-bold text-sm">
-                 Download JSON <Download size={16}/>
-               </button>
-             </div>
-             <p className="text-[10px] text-slate-400 font-bold uppercase tracking-widest p-4 text-center">Kitchen Guard v1.5.0</p>
+          <div className="flex flex-col items-center justify-center py-32 opacity-20">
+            <ShoppingCart size={64} className="mb-4" />
+            <p className="font-black uppercase tracking-widest text-[10px]">Shopping List coming soon</p>
           </div>
         )}
       </main>
