--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="OverstockGuard">
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/5110/5110688.png">
+    <link rel="apple-touch-icon" href="overstock_guard.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -77,7 +77,8 @@ const EMOJI_OPTIONS = [
   '🥫', '🥛', '🍎', '🥩', '🧊', '🧹', '🧴', '🧼', '📦', '🥚', 
   '🍞', '🧀', '🍗', '🐟', '🥗', '🍕', '🧁', '🍷', '🍺', '☕',
   '🧻', '💊', '🔋', '🕯️', '🛠️', '🌱', '🐕', '🐈', '👶', '🛀',
-  '🧂', '🍳', '🥄', '🥢', '🥡', '🍫', '🥨', '🥜', '🥞'
+  '🧂', '🍳', '🥄', '🥢', '🥡', '🍫', '🥨', '🥜', '🥞', '✏️',
+  '📁','📝','🐱', '🐾', '🐶'
 ];
 
 const DEFAULT_CATEGORIES = [
