feat: Update app icon
Replaces the existing app icon `overstock_guard.png` with `overstock_512.png` in both the `index.html` and `manifest.json` files to ensure consistency and a higher resolution icon for the PWA.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="OverstockGuard">
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="overstock_guard.png">
+    <link rel="apple-touch-icon" href="overstock_512.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
